cluster/apps/portfolio/backend-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-backend-loadbalancer
  namespace: portfolio
spec:
  selector:
    app: portfolio-backend
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
